--- a/src/main/webapp/partials/authoring/edit-uploads.html
+++ b/src/main/webapp/partials/authoring/edit-uploads.html
@@ -51,7 +51,7 @@
                     <div class="modal-body">
                         <div class="form-group">
                             <label for="number" class="col-lg-4 control-label">ACC document number</label>
-                            <div class="col-lg-6">
+                            <div class="col-lg-8">
                                 <input type="text" class="form-control" id="number" ng-model="document.accDocumentNumber" required />
                                 <div class="error" ng-show="documentForm.number.$dirty && documentForm.number.$invalid">Invalid:
                                     <span ng-show="documentForm.number.$error.required">Specify ACC document number</span>
@@ -60,7 +60,7 @@
                         </div>
                         <div class="form-group">
                             <label for="iteration" class="col-lg-4 control-label">ACC document iteration</label>
-                            <div class="col-lg-6">
+                            <div class="col-lg-8">
                                 <input type="text" class="form-control" id="iteration" ng-model="document.accDocumentIteration" required />
                                 <div class="error" ng-show="documentForm.iteration.$dirty && documentForm.iteration.$invalid">Invalid:
                                     <span ng-show="documentForm.iteration.$error.required">Specify ACC document iteration</span>
@@ -70,7 +70,7 @@
                         <div>
                             <div class="row">
                                 <label class="col-lg-4 control-label">Assigned projects</label>
-                                <div class="col-lg-6">
+                                <div class="col-lg-8">
                                     <table class="table table-striped">
                                         <tr ng-repeat="p in document.hasProject">
                                             <td>
@@ -95,7 +95,7 @@
                         </div>
                         <div class="form-group">
                             <label for="type" class="col-lg-4 control-label">Document type</label>
-                            <div class="col-lg-6">
+                            <div class="col-lg-8">
                                 <input type="text" class="form-control" id="type" ng-model="document.documentType" required />
                                 <div class="error" ng-show="documentForm.type.$dirty && documentForm.type.$invalid">Invalid:
                                     <span ng-show="documentForm.type.$error.required">Specify document type</span>
@@ -104,31 +104,31 @@
                         </div>
                         <div class="form-group">
                             <label for="name" class="col-lg-4 control-label">ownerDocumentName</label>
-                            <div class="col-lg-6">
+                            <div class="col-lg-8">
                                 <input type="text" class="form-control" id="name" ng-model="document.ownerDocumentName" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="revision" class="col-lg-4 control-label">ownerDocumentRevision</label>
-                            <div class="col-lg-6">
+                            <div class="col-lg-8">
                                 <input type="text" class="form-control" id="revision" ng-model="document.ownerDocumentRevision" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="data" class="col-lg-4 control-label">ownerDocumentRevisionData</label>
-                            <div class="col-lg-6">
-                                <input type="text" class="form-control" id="data" ng-model="document.ownerDocumentRevisionData" />
+                            <div class="col-lg-8">
+                                <input type="date" class="form-control" id="data" ng-model="document.ownerDocumentRevisionData" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="applicable" class="col-lg-4 control-label">Applicable </label>
-                            <div class="col-lg-6">
+                            <div class="col-lg-8">
                                 <input type="checkbox" id="applicable" ng-model="document.isApplicable" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="description" class="col-lg-4 control-label">Description</label>
-                            <div class="col-lg-6">
+                            <div class="col-lg-8">
                                 <input type="text" class="form-control" id="description" ng-model="document.accDescription" required />
                                 <div class="error" ng-show="documentForm.description.$dirty && documentForm.description.$invalid">Invalid:
                                     <span ng-show="documentForm.description.$error.required">Specify description</span>
@@ -137,13 +137,13 @@
                         </div>
                         <div class="form-group">
                             <label for="note" class="col-lg-4 control-label">Note</label>
-                            <div class="col-lg-6">
+                            <div class="col-lg-8">
                                 <input type="text" class="form-control" id="note" ng-model="document.accNote" />
                             </div>
                         </div>
                         <div class="form-group">
                             <label for="received" class="col-lg-4 control-label">Received</label>
-                            <div class="col-lg-6">
+                            <div class="col-lg-8">
                                 <input type="date" class="form-control" id="received" ng-model="document.dateReceived" required />
                                 <div class="error" ng-show="documentForm.received.$dirty && documentForm.received.$invalid">Invalid:
                                     <span ng-show="documentForm.received.$error.required">Specify received date</span>
@@ -152,13 +152,13 @@
                         </div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">Uploader</label>
-                            <div class="col-lg-6">
+                            <div class="col-lg-8">
                                 <p class="form-control-static">{{document.uploader}}</p>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-lg-4 control-label">Uploaded</label>
-                            <div class="col-lg-6">
+                            <div class="col-lg-8">
                                 <p class="form-control-static">{{document.dateUploaded}}</p>
                             </div>
                         </div>
