--- a/src/main/webapp/partials/querying-and-exploration/search.html
+++ b/src/main/webapp/partials/querying-and-exploration/search.html
@@ -6,7 +6,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h5 class="modal-title green bold">Sorl</h5>
+                <h5 class="modal-title green bold">Faceted Search</h5>
             </div>
             <div class="modal-body">
                 <modal-iframe></modal-iframe>
